--- a/gb/25/12/2/n14647372.md
+++ b/gb/25/12/2/n14647372.md
@@ -1,32 +1,29 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
 <table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/1992513/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/1992513/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/1992513/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/1992513/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/1992513/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/1992513/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/1992513/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/1992513/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/1992513/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/1992513/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
 <tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/1992513/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/1992513/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/1992513/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
-<tr><td VALIGN=TOP width="626"><h2 align=center>宏都拉斯与台湾复交？ 学者：有待观察</h2>
+<tr><td VALIGN=TOP width="626"><h2 align=center>洪都拉斯大选 亲台者领先 学者析未来局势</h2>
 <img width="600" src="https://i.epochtimes.com/assets/uploads/2025/12/id14647373-813373-600x400.jpg" />
-<h6>宏都拉斯大选持续开票中，亲台派的纳斯拉亚、阿斯夫拉（中）大幅领先，分居一、二。学者分析，新任总统有无可能与台湾复交，“仍有待观察”。（Lucas Aguayo/AFP via Getty Images）</h6>
+<h6>洪都拉斯大选持续开票中，亲台派的纳斯拉亚、阿斯夫拉（中）大幅领先，分居前一、二名。学者分析，新任总统有无可能与台湾复交，“仍有待观察”。（Lucas Aguayo/AFP via Getty Images）</h6>
 <hr>
-<p>【大纪元2025年12月02日讯】（大纪元记者林丞奕台湾台北报导）宏都拉斯总统大选11月30日举行，目前由两名“亲台派”候选人分居一二。学者向《大纪元》分析，宏都拉斯现任总统卡斯楚并未履行承诺，与台湾断交的两年内白虾出口暴跌67%，虾场倒闭近6成，“执政党就会被轮替掉”；至于新任总统有无可能与台湾复交，“仍有待观察”，过去也曾出现，与中共断交、台湾建交，然后又跟台湾断交、与中共建交的先例。</p>
-<p>宏都拉斯总统候选人有5位参选，然而选民真正聚焦的人选则有3名，包括现任总统卡斯楚（Xiomara Castro）所属执政党候选人蒙卡达（Rixi Moncada）、中间偏右在野“自由党”的纳斯拉亚（Salvador Nasralla），以及右派在野“国家党”（National Party）候选人阿斯夫拉（Nasry Asfura）。</p>
-<p>宏都拉斯总统大选持续开票中，亲中执政党蒙卡达大幅落后，由“亲台派”的纳斯拉亚、阿斯夫拉大幅领先，分居一、二。根据外媒报导指出，阿斯夫拉以515票领先纳斯拉亚。然而，由于选举网站出现问题，目前尚不清楚已开出的票数，因此将启动“人工计票”。</p>
-<p>对此，美国总统川普也在社群媒体表示，宏都拉斯正试图更动选举结果，“若真如此，后果将非常严重”。</p>
-<p>值得关注的是，阿斯夫拉获得川普公开支持。川普说，若他支持的候选者落选，美国将削减对宏国的援助。</p>
-<p>中正大学政治系教授蔡荣祥向《大纪元》分析指出，川普藉由公开支持，选择与其政策相似的右派候选人是“国际连结”，但川普的喊话是否凑效难以定论。他认为，“左派今天执政很好，川普支持右派人选有用吗？”但若刚好左派执政不行，川普又如此登高一呼，势必产生临门一脚的功用。</p>
-<p>蔡荣祥续指，由于宏都拉斯经济目前情况不佳，而川普希望宏国与美国保持一个很好的关系，所以川普此次表态，也代表着美国对于宏都拉斯的影响力很大。</p>
-<p>宏都拉斯自2021年起，由左派自由与重建党总统卡斯楚（Xiomara Castro）领导，期间2023年与台湾断交转向中国建交，并称此举可为宏国促进贸易并吸引外资。</p>
-<p>台湾曾是宏都拉斯出口白虾的最大市场，占宏国出口率40%，然而台宏断交后，白虾产业失去台湾市场近乎崩盘，宏国外长曾说，为挽救白虾产业，宏国政府正重新寻求接触台湾市场。</p>
-<p>据宏都拉斯全国养殖渔业协会（Andah）数据显示，与台湾断交两年期间，白虾出口暴跌67%，更造成数万名工人失业。</p>
-<p>蔡荣祥补充说道，由于卡斯楚与中共建交，但中共的承诺最终都没兑现、不认账，包含白虾出口中国，这导致宏国与台湾断交的两年内出口暴跌67%，虾场关闭近6成。“即使认账，白虾的价格也仅是台湾的一半，用较低价格收购”。卡斯楚说要让宏国经济变好，显然白虾产业并没有比较好，其他产业进展也有限的情况，执政党就会被轮替掉。</p>
-<p>蔡荣祥还说，跟中共建交之后，中共就会不理了，“反正你跟我建交了，我干嘛还要再理你，自然就不会去达成所谓的承诺”，这对于贫穷的国家来说，伤害非常大。</p>
-<p>针对亲中候选人蒙卡达在开票中落居第三，蔡荣祥指出，中共与其他国家透过经济合作、一带一路计划合作，不过，问题是中共承诺都没有做到，最终只会使其他国家、人民反弹。</p>
-<p>蔡荣祥说，过去中共所有的经济计划都是整体配套输出，并没有给予当地国家太多机会，或去协助建设等，中共所使用的都是中国工人、团队，因此一带一路计划的形象都很差，甚至有的国家抗议为何只雇用中国人。</p>
-<p>他分析，中共的外交合作操作就是，若是缴不出钱，就进行债务展延，包括高速公路收费交由中共处理，或该地方由中共租借99年等；反观日本，日本会聘用一些当地人，甚至会无偿提供协助，所以日本在东南亚的民调里，支持率一向很高。</p>
-<p>对于亲中候选人落后是否代表中共外交挫败？蔡荣祥直言，不见得是外交的挫败，尽管其中也一定涉及台湾议题。他说，宏国白虾出口暴跌、白虾产业、企业倒闭都是事实，然而这绝对不是一个必要的因素，其中涉及卡斯楚是否将经济撑起、国家安全议题，或是犯罪率降低，卡斯楚所承诺的都没有兑现，势必影响继任的候选人。</p>
-<p>蔡荣祥表示，中国因素可在讨论，因为无法关键决定说，就是因为宏都拉斯与中国建交后，经济完全变得糟糕。</p>
-<p>关于纳斯拉亚、阿斯夫拉主张断交中共，复交台湾。蔡荣祥坦言，新任总统上任政策一定会有所变化，但断交一定会遭中共反制，就像是日本“台湾有事论”遭中共制裁；宏都拉斯若开始台湾接触，中共就会透过软、硬手段，不让宏国向台湾靠拢。</p>
-<p>蔡荣祥还说，国际社会都认为纳斯拉亚、阿斯夫拉两位候选人，虽然在选前喊话恢复与台湾的关系，但是仍需要近一步观察，因为中共会使出什么招数仍不清楚。过去也有跟中共断交、与台湾建交，然后又跟台湾断交、与中共建交，“因此这都有待观察”。</p>
-<p>至于中共软、硬手法？蔡荣祥进一步说明，软：过去所承诺的没做到，再次承诺，并且再加码，将宏国拉过去，至少不让宏国与台湾复交；硬：若与台湾政府谈合作事项、复交等，就会以制裁方式，就像此次对日本的方式，包括产品禁口、日本艺人滨崎步在上海的演唱会取消等。</p>
-<p>谈到宏国与台湾复交的可能性？蔡荣祥认为，中共不会承认所谓的“双重承认”，若与台湾复交，势必与中共断交，而中共必然会祭出制裁，因此这是宏国的难题。</p>
-<p>蔡荣祥假设，若宏国无法与台湾复交，又期望与台湾政府在经济领域合作等，基于台湾政府的立场，可能相对来说较为困难难，“你跟我建交，购买白虾没问题，这是我们的承诺；但没跟我建交，又要我购买白虾，可能比较困难，就要看宏都拉斯以什么方式跟台湾政府谈”。</p>
+<p>【大纪元2025年12月02日讯】（大纪元记者林丞奕台湾台北报导）洪都拉斯（宏都拉斯）总统大选11月30日举行，目前由两名“亲台派”候选人分居前一、二名。</p>
+<p>学者向大纪元分析，洪都拉斯与台断交转向与中共建交后，中共并未履行承诺，导致洪国两年内白虾出口暴跌67%，虾场倒闭近六成，“执政党就会被轮替掉”；至于新任总统有无可能与台湾复交，“仍有待观察”，过去也曾出现，与中共断交、台湾建交，又反复跟台湾断交、与中共建交的先例。</p>
+<h2><strong>亲台派大幅领先</strong></h2>
+<p>洪都拉斯总统大选有5位参选人，选民真正聚焦的则有3名，包括执政党候选人蒙卡达（Rixi Moncada）、中间偏右在野“自由党”的纳斯拉亚（Salvador Nasralla），以及右派在野“国家党”（National Party）候选人阿斯夫拉（Nasry Asfura）。</p>
+<p>大选持续开票中，亲中派蒙卡达大幅落后，亲台派的纳斯拉亚、阿斯夫拉大幅领先，分居第一、二。根据外媒报导指出，阿斯夫拉以515票领先纳斯拉亚。然而，由于选举网站出现问题，目前尚不清楚已开出的票数，因此将启动“人工计票”。</p>
+<h2><strong>川普警告 若作票后果非常严重</strong></h2>
+<p>美国总统川普在社群媒体警告，洪都拉斯正试图更动选举结果，“若真如此，后果将非常严重”。值得关注的是，川普总统公开支持阿斯夫拉。川普说，若他支持的候选者落选，美国将削减对洪国的援助。</p>
+<p>关于川普对于洪都拉斯选举的影响，中正大学政治系教授蔡荣祥向大纪元分析指出，川普喊话是否奏效虽难以定论，不过由于洪都拉斯目前经济情况不佳，而川普希望洪国与美国保持良好的关系，所以川普此次表态，也代表着美国对于洪都拉斯的影响力很大。</p>
+<h2><strong>中共的承诺大跳票 重创洪国白虾</strong></h2>
+<p>洪都拉斯自2021年起，由左派自由与重建党总统卡斯楚（Xiomara Castro）领导，2023年与台湾断交转向与中共建交，并称可为洪国促进贸易并吸引外资。不料中共购买白虾等多项承诺跳票，重创洪国经济。</p>
+<p>台湾曾是洪都拉斯出口白虾的最大市场，占洪国出口率40%。洪台断交后，白虾产业失去台湾市场近乎崩盘。据洪都拉斯全国养殖渔业协会（Andah）数据显示，与台湾断交两年期间，白虾出口暴跌67%，更造成数万名工人失业。洪国外长曾说，为挽救白虾产业，洪国政府正重新寻求接触台湾市场。</p>
+<p>蔡荣祥补充说道，卡斯楚说要让洪国经济变好，显然白虾产业并没有变好，其它产业进展也有限的情况，执政党就会被轮替。</p>
+<h2><strong>与台复交可能性</strong></h2>
+<p>谈到洪国与台湾复交的可能性，蔡荣祥认为，中共不会承认所谓的“双重承认”，洪国若与台湾复交，势必与中共断交，而中共必然会祭出制裁，这是洪国的难题。</p>
+<p>蔡荣祥假设，若洪国无法与台湾复交，又期望与台湾政府在经济领域合作等，基于台湾政府的立场，可能相对来说也较为困难，“你跟我建交，购买白虾没问题；但没跟我建交，又要我购买白虾，可能比较困难，就要看洪都拉斯以什么方式跟台湾政府谈”。</p>
+<h2><strong>洪都拉斯断交中共？学者：政策将有变化</strong></h2>
+<p>至于纳斯拉亚、阿斯夫拉主张断交中共，复交台湾。蔡荣祥坦言，新任总统上任政策一定会有所变化，但断交一定会遭中共反制，就像是日本“台湾有事论”遭中共制裁；洪都拉斯若开始与台湾接触，中共就会透过软、硬手段，不让洪国向台湾靠拢。</p>
+<p>蔡荣祥还说，纳斯拉亚、阿斯夫拉虽然在选前喊话恢复与台湾的关系，但仍需要进一步观察，因为中共会使出什么招数仍不清楚。过去也有跟中共断交、与台湾建交，然后又跟台湾断交、与中共建交，“因此这都有待观察”。</p>
+<p>此外，蒙卡达落后是否代表中共外交挫败？蔡荣祥直言，不见得，尽管其中也必定涉及台湾议题。洪国白虾出口暴跌、白虾产业、企业倒闭都是事实，然而这绝对不是一个必要的因素，还涉及卡斯楚是否将经济撑起、国家安全议题，或是犯罪率降低，卡斯楚所承诺的都没有兑现，势必影响继任的候选人。◇</p>
 <p>责任编辑：陈玟绮</p>
 <strong>相关新闻：</strong>
 <li><a href="https://github.com/1992513/djy/blob/master/gb/25/4/13/n14481653.md#1">湖北维权人士案件庭审 莫名被增加两项罪名</a></li>
@@ -34,7 +31,7 @@
 <li><a href="https://github.com/1992513/djy/blob/master/gb/25/8/31/n14584722.md#1">湖北访民夫妻被以虚构罪名判入狱 生命垂危</a></li>
 <li><a href="https://github.com/1992513/djy/blob/master/gb/25/10/22/n14621384.md#1">湖北访民尹登珍狱中病情恶化 家属吁紧急救援</a></li>
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank">从大师到徒弟的传奇</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/19/3/4/n11088075.md#1" target="_blank">野狐一禅：刻我心碑上的右派精英</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/17/9/12/n9623089.md#1" target="_blank">坚持在卢森堡公园炼功 法国法轮功学员谈感受</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank">关注3亿人三退</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/18/12/10/n10902151.md#1" target="_blank">龙延：中共道路是魔鬼的选择</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/16/3/17/n4664320.md#1" target="_blank">她在电话那头喊：感谢法轮功师父救了我！</a></li>
 <strong>热门新闻：</strong>
 <li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/18/n14638002.md#1">高人点化孙叔敖：谨记三条铁律，就能获得善终</a></li>
 <li><a href="https://github.com/1992513/djy/blob/master/gb/25/10/4/n14608984.md#1">【古道人生】许多人都知道天诛 不知道地灭是怎回事</a></li>
@@ -57,5 +54,5 @@
 <li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/21/n14640625.md#1">“黑色星期五”年度优惠周11月20日提前开跑</a></li>
 <li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/21/n14640269.md#1">心理学家：判断伴侣是否真正契合的两个迹象</a></li>
 <li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/21/n14640311.md#1">喝茶有禁忌？ 美国医生说这样喝会伤身</a></li>
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/25/12/2/n14647372.htm">宏都拉斯与台湾复交？ 学者：有待观察</a></p><hr>
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/25/12/2/n14647372.htm">洪都拉斯大选 亲台者领先 学者析未来局势</a></p><hr>
 <strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://quickchart.io/qr?size=256&text=https://github.com/1992513/djy/blob/master/gb/25/12/2/n14647372.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/1992513/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/1992513/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/1992513/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
