--- a/gb/25/11/14/n14635702.md
+++ b/gb/25/11/14/n14635702.md
@@ -33,12 +33,12 @@
 <p>总体而言，13日庭审的证词勾勒出检方的主论述：孙雯长期利用州政府亚太事务“专业门户”的角色，压制台湾外交接触、强化与中领馆往来、滥用公务系统申请褒奖，并涉入伪造州长签名。庭审仍在持续，更多内部往来与手机内容预料将在后续数日陆续曝光。</p>
 <p>责任编辑：陈玟绮#</p>
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/11/n14549246.md#1">担忧被裁员 Z世代最不愿在职场使用AI</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/8/12/n14571859.md#1">从裁员到高校课程：AI改变职场与教育</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/20/n14639479.md#1">华大人工智能计划获千万美元捐助</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/19/n14639042.md#1">华州退休生活成本高居全美第五</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/1/16/n14414940.md#1">农民工讨薪 厦门象屿集团动用高压水枪驱逐</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/8/6/n14568122.md#1">四川江油校园霸凌引发大规模抗议 海外声援</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/8/7/n14569378.md#1">【纪元焦点】白纸运动未远 江油抗争已起</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/1/n14627448.md#1">海南国企偷砍农户槟榔树 引发警民冲突</a></li>
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/1992513/ntdtv/blob/master/gb/2020/07/20/a102898210.md#1" target="_blank">美国务卿：中共迫害法轮功21年 必须停止</a> </li><li><a href="https://github.com/1992513/djy/blob/master/gb/17/11/11/n9829932.md#1" target="_blank">杨宁：邓小平妻兄服毒自尽 两连襟被迫害死</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/18/9/14/n10713843.md#1" target="_blank">德国绿嫩市政府官方网页推荐法轮功</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank">马克思的成魔之路</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/18/8/28/n10672735.md#1" target="_blank">为反右开场祭旗：三人被处决 万人围观</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/9/1/10/n2392045.md#1" target="_blank">中国人想问又不敢问的法轮功问题解答</a></li>
 <strong>热门新闻：</strong>
 <li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/18/n14638002.md#1">高人点化孙叔敖：谨记三条铁律，就能获得善终</a></li>
 <li><a href="https://github.com/1992513/djy/blob/master/gb/25/10/4/n14608984.md#1">【古道人生】许多人都知道天诛 不知道地灭是怎回事</a></li>
